stylesheets/_modules.scss
/* ... */
.module-avatar-popup__item__icon-settings {
  @include light-theme {
    @include color-svg(
      '../images/icons/v2/settings-outline-16.svg',
      $color-gray-75
    );
  }
  @include dark-theme {
    @include color-svg(
      '../images/icons/v2/settings-solid-16.svg',
      $color-gray-15
    );
  }
}
.module-avatar-popup__item__icon-archive {
  @include light-theme {
    @include color-svg(
      '../images/icons/v2/archive-outline-16.svg',
      $color-gray-75
    );
  }
  @include dark-theme {
    @include color-svg(
      '../images/icons/v2/archive-solid-16.svg',
      $color-gray-15
    );
  }
}

.module-avatar-popup__item__text {
  flex-grow: 1;
  margin-left: 8px;
}

.module-avatar-popup__item--badge {
  background: $color-ultramarine;
  border-radius: 100%;
  height: 8px;
  margin-right: 10px;
  width: 8px;
}

// Module: Shortcut Guide Modal

.module-shortcut-guide-modal {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  padding: 20px;

  display: flex;
  flex-direction: row;
  align-items: center;

  background-color: $color-black-alpha-40;
  z-index: $z-index-above-context-menu;
}

.module-shortcut-guide-container {
  flex-grow: 1;
  overflow: hidden;
}

// Module: Shortcut Guide

.module-shortcut-guide {
  border-radius: 4px;
  padding: 16px;

  max-height: calc(100vh - 40px);
  max-width: 1150px;
  margin-left: auto;
  margin-right: auto;

  display: flex;
  flex-direction: column;

  @include popper-shadow;

  @include light-theme {
    color: $color-gray-90;
    background-color: $color-white;
  }
  @include dark-theme {
    color: $color-gray-05;
    background-color: $color-gray-75;

    ::-webkit-scrollbar-thumb {
      border: 2px solid $color-gray-75;
    }
  }
}

.module-shortcut-guide__header {
  display: flex;
  flex-direction: row;
  align-items: center;

  margin-bottom: 20px;
}

.module-shortcut-guide__header-text {
  @include font-title-2;

  flex-grow: 1;
}
.module-shortcut-guide__header-close {
  @include button-reset;

  height: 24px;
  width: 24px;

  @include light-theme {
    @include color-svg('../images/icons/v2/x-24.svg', $color-gray-60);
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/x-24.svg', $color-gray-05);
  }

  &:focus {
    @include keyboard-mode {
      @include color-svg('../images/icons/v2/x-24.svg', $color-ultramarine);
    }
    @include dark-keyboard-mode {
      @include color-svg(
        '../images/icons/v2/x-24.svg',
        $color-ultramarine-light
      );
    }
  }
}

.module-shortcut-guide__section-header {
  @include font-body-1-bold;

  margin-bottom: 8px;
}

.module-shortcut-guide__scroll-container {
  outline: none;
  overflow-y: scroll;
}

.module-shortcut-guide__section {
  &:not(:last-child) {
    margin-bottom: 25px;
  }
}

@media (min-width: 900px) {
  .module-shortcut-guide__section-list {
    column-count: 2;
    column-gap: 20px;
    column-span: none;
    column-fill: auto;
  }
}

.module-shortcut-guide__shortcut {
  display: flex;
  flex-direction: row;
  align-items: center;
  break-inside: avoid;

  padding-left: 4px;
  min-height: 40px;
  outline: none;

  &:focus {
    @include keyboard-mode {
      background-color: $color-gray-05;
    }
    @include dark-keyboard-mode {
      background-color: $color-gray-90;
    }
  }

  @include light-theme {
    border-bottom: 1px solid $color-gray-05;
  }
  @include dark-theme {
    border-bottom: 1px solid $color-gray-90;
  }
}

.module-shortcut-guide__shortcut__description {
  flex-grow: 1;
  margin-top: 4px;
  margin-bottom: 4px;
}
.module-shortcut-guide__shortcut__key-container {
  margin-bottom: 4px;
}
.module-shortcut-guide__shortcut__key-inner-container {
  text-align: right;
  margin-top: 4px;
  margin-right: 4px;
  white-space: nowrap;
}

.module-shortcut-guide__shortcut__key {
  display: inline-block;

  border-radius: 2px;
  padding: 3px;
  padding-left: 8px;
  padding-right: 8px;
  margin-left: 4px;

  height: 30px;
  text-align: center;

  @include light-theme {
    border: 1px solid $color-gray-15;
  }
  @include dark-theme {
    border: 1px solid $color-gray-90;
  }
}

.module-shortcut-guide__shortcut__key--square {
  width: 30px;
  padding-left: 0px;
  padding-right: 0px;
}

/* Calling: Device Selection */

.module-calling-device-selection {
  position: relative;
}

.module-calling-device-selection__close-button {
  @include button-reset;

  @include color-svg('../images/icons/v2/x-24.svg', $color-gray-15);

  height: 24px;
  position: absolute;
  right: 5px;
  top: 0;
  width: 24px;
  z-index: $z-index-above-base;

  @include keyboard-mode {
    &:focus {
      outline: 2px solid $color-ultramarine;
    }
  }
}

.module-calling-device-selection__title {
  @include font-title-2;
  margin-top: 12px;
  margin-bottom: 20px;
}

.module-calling-device-selection__label {
  @include font-body-1-bold;
  display: block;
  margin-bottom: 16px;
}

.module-calling-device-selection__select {
  margin-bottom: 20px;
  position: relative;

  select {
    @include font-body-1;
    -webkit-appearance: none;
    border-radius: 4px;
    border: 1px solid $color-gray-45;
    cursor: pointer;
    height: 40px;
    outline: 0;
    padding: 10px;
    padding-right: 32px;
    text-overflow: ellipsis;
    width: 100%;
  }

  &::after {
    border: 2px solid $color-gray-75;

    border-radius: 2px;
    border-right: 0;
    border-top: 0;
    content: ' ';
    display: block;
    height: 10px;
    pointer-events: none;
    position: absolute;
    right: 15px;
    top: 16px;
    transform-origin: center;
    transform: rotate(-45deg);
    width: 10px;
    z-index: $z-index-above-base;
  }
}

// Module: GroupV1 Disabled Actions

.module-group-v1-disabled-actions {
  padding: 8px 16px 12px 16px;
  max-width: 650px;
  margin-left: auto;
  margin-right: auto;

  @include light-theme {
    background: $color-white;
  }

  @include dark-theme {
    background: $color-gray-95;
  }
}
/* ... */

